--- a/res/layout/activity_orderdetails1.xml
+++ b/res/layout/activity_orderdetails1.xml
@@ -32,6 +32,7 @@
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"   
 	    android:layout_below="@+id/activity_orderdetails1_head"
+	     android:layout_above="@+id/activity_orderdetails1_foot"
 	 	>
       <LinearLayout android:layout_width="match_parent"
 	    android:layout_height="match_parent"
@@ -387,5 +388,50 @@
 	
 	</LinearLayout>
 	</ScrollView>     
+	<LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="vertical"
+	    android:paddingLeft="20dp"
+	    android:paddingRight="20dp"
+	    android:paddingBottom="2dp"
+	    android:background="@drawable/bottom_border"
+	    android:layout_alignParentBottom="true"
+	    android:focusable="true"  
+        android:focusableInTouchMode="true"
+	    android:id="@+id/activity_orderdetails1_foot"
+	    >
+	    <EditText android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:id="@+id/orderdetails1_AuditOpinion"
+	        android:hint="审核意见"/>
+	    <LinearLayout android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:gravity="right"
+	        android:orientation="horizontal">
 
+	        <Button
+	             android:layout_height="33dp"
+	            android:layout_width="wrap_content"
+	            android:background="@color/blue"
+	            android:gravity="center"
+	            android:paddingBottom="0dp"
+	            android:paddingTop="0dp"
+	            android:text="同意"
+	            android:id="@+id/orderdetails1_state3"
+	            android:textColor="#fff" />
+
+	        <Button 
+	            android:layout_height="33dp"
+	            android:layout_width="wrap_content"
+	            android:background="@color/blue"
+      			android:gravity="center"
+      			 android:paddingBottom="0dp"
+	            android:paddingTop="0dp"
+      			android:layout_marginLeft="20dp"
+      			android:id="@+id/orderdetails1_state4"
+      			android:text="不同意"
+      			android:textColor="#fff"/>
+	    </LinearLayout>
+	</LinearLayout>
 </RelativeLayout>
