--- a/res/layout/activity_setting.xml
+++ b/res/layout/activity_setting.xml
@@ -96,6 +96,7 @@
 	        android:text="退出登录"
 	        android:textStyle="bold"
 	        android:textSize="20dp"
+	        android:id="@+id/setting_return_to_login"
 	        android:gravity="center_horizontal|center_vertical"
 	        android:background="@color/white"/>
 	</LinearLayout>
